// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree Basic check basic render 1`] = `
<div
  class="rc-tree"
  role="tree"
>
  <div>
    <div
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-checkbox"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-disabled rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:18px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox rc-tree-checkbox-disabled"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:18px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic renders correctly 1`] = `
<div
  class="rc-tree forTest rc-tree-show-line"
  role="tree"
>
  <div>
    <div
      style="display:flex;flex-direction:column"
    >
      <div
        class="spe rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-checkbox"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="parent 1"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            parent 1
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-disabled rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:18px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-checkbox rc-tree-checkbox-disabled"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="leaf 1"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            leaf 1
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:36px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="leaf"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            leaf
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:36px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="leaf"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            leaf
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:18px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox rc-tree-checkbox-disabled"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="leaf 2"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            leaf 2
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
